[package]
name = "kintoDiffCCADB"
version = "0.1.0"
authors = ["Christopher Henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.3"
futures = "0.1.28"
reqwest = "0.9.18"
crossbeam = "0.7.1"
crossbeam-channel = "0.3.8"

tempdir = "0.3.7"


rand = "0.7.0"

lazy_static = "1.3.0"

bzip2 = "0.3.2"
tar = "0.4"


error-chain = "0.12.1"


fs_extra = "1.1.0"

notify = "4.0.12"