[package]
name = "kinto_check"
version = "0.1.0"
authors = ["Christopher Henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
error-chain = "0.12.1"
serde_json = "1.0"
serde =  { version = "1.0.92", features = ["derive"] }
structopt = "0.2.16"