[package]
name = "kinto_integrity"
version = "0.1.0"
authors = ["Christopher Henderson <chris@chenderson.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
reqwest = "0.9.18"
crossbeam = "0.7.1"
tempdir = "0.3.7"
rand = "0.7.0"
lazy_static = "1.3.0"
bzip2 = "0.3.2"
tar = "0.4"
error-chain = "0.12.1"
url = "2.1.0"

fern = "0.5.8"
log = "0.4"
chrono = "0.4.7"

x509-parser = "0.6.0"
asn1_der_derive = "0.1.1"
asn1_der = "0.6.2"
der-parser =  "3.0.0"
simple_asn1 = "0.4.0"



serde_json = "1.0"
serde =  { version = "1.0.92", features = ["derive"] }

indicatif = "0.11.0"

# deps from Dana's tool
base64 = "0.10"
lmdb-rkv = "0.11"
rkv = "^0.9"